@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-07T16:29:27Z",
+  "timestamp" : "2022-08-08T08:31:18Z",
   "count_outdated" : 449,
   "uniques_outdated" : 40,
-  "count" : 526,
-  "uniques" : 43,
+  "count" : 527,
+  "uniques" : 44,
   "views" : [
     {
       "timestamp": "2022-07-28T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 75,
       "count_minmax": [ 75, 75 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
