@@ -1,5 +1,5 @@
 {
-  "count": 77,
+  "count": 78,
   "uniques": 1,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 75,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
